fix bash script to launch properly java app