@@ -217,7 +217,9 @@ grab_uniprot_file
 
 tail -n +2 ${expectation_file} >> "${proteome_file}"
 
-java -jar -server -XX:+UseParallelGC -Xmx4g -Xms2g ${grools} ${grools_opts[@]} ${proteome_file} ${output}
+java -jar -server -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -Xmn256m \
+     -XX:+UseStringDeduplication -XX:CMSInitiatingOccupancyFraction=70 \
+     -Xms2g -Xmx4g ${grools} ${grools_opts[@]} ${proteome_file} ${output}
 
 echo "Visualize results $(readlink -m ${output}/index.html)"
 
